--- a/android/plant_tracker/app/src/main/res/values/attrs.xml
+++ b/android/plant_tracker/app/src/main/res/values/attrs.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="BarGraph">
+    <declare-styleable name="GraphBase">
         <attr name="graph_title" format="string"/>
         <attr name="graph_max" format="float"/>
         <attr name="graph_min" format="float"/>
+        <attr name="graph_label_step" format="integer"/>
+        <attr name="graph_unit" format="string"/>
     </declare-styleable>
 </resources>
