--- a/android/plant_tracker/app/src/main/res/layout/view_plants_activity.xml
+++ b/android/plant_tracker/app/src/main/res/layout/view_plants_activity.xml
@@ -29,8 +29,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#F3F3F3">
+                android:layout_height="match_parent">
 
                 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                     android:id="@+id/swiperefresh"
@@ -46,8 +45,12 @@
                         android:id="@+id/plants_listview"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
+                        android:paddingTop="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingBottom="100dp"
+                        android:clipToPadding="false"
                         android:divider="@null"
-                        android:padding="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
