--- a/android/plant_tracker/app/src/main/res/values/colors.xml
+++ b/android/plant_tracker/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="black">#FF000000</color>
     <color name="dark_grey">#4B4B4B</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#FFF11100</color>
+    <color name="yellow">#B7B70F</color>
+    <color name="orange">#FFA500</color>
+    <color name="red">#FF0000</color>
     <color name="green">#10783E</color>
     <color name="light_green">#AFD1A7</color>
     <color name="transparent_green">#4D42B66F</color>
